--- a/admin/admin.html
+++ b/admin/admin.html
@@ -6,5 +6,7 @@
 </head>
 <body>
 admin
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+<script src="admin.js"></script>
 </body>
 </html>
